--- a/front/src/Components/Home/home.module.css
+++ b/front/src/Components/Home/home.module.css
@@ -1,13 +1,13 @@
 .subTotal {
     height: 100vh;
-    background-image: url("../Media/logo.png");
-    background-repeat: no-repeat;
-    background-size: 30%;
-    background-position-x: right;
-    background-position-y: bottom;
 }
 
 .contenedor {
+    background-image: url("../Media/3.png");
+    background-repeat: no-repeat;
+    background-position-x: right;
+    background-position-y: bottom;
+    background-size: 16%;
     display: grid;
     height: 100%;
     grid-template-rows: 16% 84%;
@@ -40,12 +40,14 @@
 }
 
 .bttn {
-    background-color: #4f5054;
-    color: white;
+    background-color: white;
+    color: #4e6b74;
     border: none;
     width: 14em;
     height: 4em;
     letter-spacing: 0.2em;
+    border-radius: .25em;
+    border: 1.8px solid #4e6b74;
 }
 
 .bttnL {
