--- a/front/src/Components/Landing/landing.module.css
+++ b/front/src/Components/Landing/landing.module.css
@@ -7,7 +7,7 @@
     /* background-repeat: no-repeat;
     background-size: cover;
     background-position: center; */
-    height: 26em;
+    height: 100vh;
     display: grid;
     align-content: center;
     justify-content: center;
