--- a/front/src/Components/Home/home.module.css
+++ b/front/src/Components/Home/home.module.css
@@ -58,3 +58,15 @@
     height: 4em;
     letter-spacing: 0.2em;
 }
+
+.bttnALt {
+    background-color: white;
+    color: #4e6b74;
+    border: none;width: 90%;
+    height: 4em;
+    letter-spacing: 0.2em;
+    border-radius: .25em;
+    border: 1.8px solid #4e6b74;
+    font-size: .6em;
+}
+
