alta cliente back and front

--- a/front/src/Components/Altas/Products/product.module.css
+++ b/front/src/Components/Altas/Products/product.module.css
@@ -37,7 +37,7 @@
 .titulo {
     margin: 0 0 1em 0;
     color: white;
-    font-weight: bold;
+    font-size: x-large;
     display: flex;
     justify-content: center;
 }
