--- a/front/src/Components/Landing/vision/vision.module.css
+++ b/front/src/Components/Landing/vision/vision.module.css
@@ -1,18 +1,35 @@
 .all {
     padding-bottom: 6em;
+    padding-top: 3em; /* Agregar espacio arriba para equilibrar el contenido */
 }
 
+/* Estilo para el título */
 .titulo {
-    font-size: 2.2em;
-    padding-bottom: .4em;
-    padding-top: .4em;
+    font-size: 2.4em; /* Aumenté ligeramente el tamaño para darle más énfasis */
+    font-weight: bold; /* Añadí negrita para resaltar el título */
+    padding-bottom: .6em;
     display: flex;
     justify-content: center;
+    text-align: center; /* Centrar el texto para mejorar la apariencia */
 }
 
+/* Estilo para el texto */
 .text {
-    font-size: 1.1em;
+    font-size: 1.2em; /* Aumenté un poco el tamaño para mejorar la legibilidad */
     color: rgba(0, 0, 0, 0.642);
-    width: 95%;
+    width: 90%;
     margin: auto;
+    line-height: 1.6; /* Mejorar la legibilidad con un mayor espacio entre líneas */
+}
+
+/* Estilos responsivos */
+@media (max-width: 768px) {
+    .titulo {
+        font-size: 2em; /* Ajustar el tamaño del título para pantallas más pequeñas */
+    }
+
+    .text {
+        font-size: 1.1em;
+        width: 95%; /* Ampliar el ancho del texto en dispositivos pequeños */
+    }
 }
