mejoras login y cambio diseño

--- a/front/src/Components/Home/nav/navH.module.css
+++ b/front/src/Components/Home/nav/navH.module.css
@@ -1,5 +1,5 @@
 .nav {
-    background-image:  url("../../Media/fondoPapel.png");
+    background-color: rgba(158, 155, 155, 0.845);
     box-shadow: 0 0 1.5em 0 #4f5054;
     color: #4e6b74;
     padding: 1.6em;
@@ -24,7 +24,7 @@
 }
 
 .bttnInside {
-    background-color: #606060;
+    background-color: #4e6b74;
     color: white;
     border: none;
     height: 3em;
