--- a/front/src/Components/Landing/vision/vision.module.css
+++ b/front/src/Components/Landing/vision/vision.module.css
@@ -1,6 +1,7 @@
 .all {
     padding-bottom: 6em;
     padding-top: 3em; /* Agregar espacio arriba para equilibrar el contenido */
+    color: white;
 }
 
 /* Estilo para el título */
@@ -16,7 +17,6 @@
 /* Estilo para el texto */
 .text {
     font-size: 1.2em; /* Aumenté un poco el tamaño para mejorar la legibilidad */
-    color: rgba(0, 0, 0, 0.642);
     width: 90%;
     margin: auto;
     line-height: 1.6; /* Mejorar la legibilidad con un mayor espacio entre líneas */
