--- a/front/src/Components/Landing/nav/nav.module.css
+++ b/front/src/Components/Landing/nav/nav.module.css
@@ -1,19 +1,30 @@
 .nav {
-    background-color: white;
+    position: fixed;  
+    top: 0;        
+    left: 0;
+    width: 100%;     
+    background-color: white; 
     color: #4e6b74;
     padding: 1.6em;
     font-family: 'Montserrat', sans-serif;
     box-shadow: 0 0 1.5em 0 #4f5054;
+    z-index: 1000;   
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-/* Contenedor general para centrar todo */
+.total {
+    padding-top: 80px; 
+}
+
 .general {
     display: flex;
     justify-content: center;
     align-items: center;    
+    width: 100%;   
 }
 
-/* Subcontenedor para organizar título y enlaces */
 .sub {
     width: 90%;
     display: flex;
@@ -21,48 +32,51 @@
     align-items: center;
 }
 
-/* Título de la empresa */
 .title {
+    color: inherit; 
+    text-decoration: none; 
     font-size: 1.4em;
     font-weight: bold;
 }
 
-/* Contenedor de los enlaces */
 .links {
     width: 60%;
     display: flex;
     justify-content: space-evenly;
 }
 
-/* Estilo para los enlaces de navegación */
 .s {
     color: #4e6b74;
     font-weight: bold;
     cursor: pointer;
-    transition: color 0.3s ease, transform 0.3s ease; /* Efectos suaves para la interacción */
+    transition: color 0.3s ease, transform 0.3s ease;
+    color: inherit; 
+    text-decoration: none; 
 }
 
-/* Efecto hover sobre los enlaces */
 .s:hover {
-    color: #3e5055; /* Color más oscuro al pasar el ratón */
-    transform: scale(1.1); /* Ligeramente más grande al pasar el ratón */
+    color: #3e5055;
+    transform: scale(1.1);
 }
 
-/* Estilos responsivos */
 @media (max-width: 768px) {
     .sub {
-        flex-direction: column; /* Colocar los elementos en columna */
+        flex-direction: column;
         text-align: center;
     }
 
     .links {
-        width: 100%; /* Asegurar que los enlaces ocupen todo el ancho */
+        width: 100%;
         margin-top: 1em;
         flex-direction: column;
-        gap: 1em; /* Espaciado entre los enlaces */
+        gap: 1em;
     }
 
     .title {
-        font-size: 1.2em; /* Ajustar el tamaño del título */
+        font-size: 1.2em;
+    }
+
+    .nav {
+        padding: 1em; 
     }
 }
