--- a/front/src/Components/Home/home.module.css
+++ b/front/src/Components/Home/home.module.css
@@ -1,76 +1,89 @@
-.subTotal {
-    height: 100vh;
-}
-
-.contenedor {
-    background-image: url("../Media/3.png");
-    background-repeat: no-repeat;
-    background-position-x: right;
-    background-position-y: bottom;
-    background-size: 16%;
+.home_container {
+    font-family: var(--font-body);
     display: grid;
-    height: 100%;
-    grid-template-rows: 16% 84%;
+    grid-template-rows: auto 1fr;
+    min-height: 100vh;
 }
 
-.c {
-    display: grid;
-    grid-template-rows: 25% 35%;
-    gap: 40%;
+.home_body {
+    flex: 1; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.parteUno {
+.home_accions {
+    margin: 1.4rem;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding-left: 2em;
-    padding-right: 2em;
+    flex-wrap: wrap;
+    gap: 1rem; 
+    position: relative;
 }
 
-.contenedor2 {
-    display: grid;
-    align-content: center;
-    padding-left: 2em;
+.dropdownContainer {
+    position: relative;
+    display: inline-block;
 }
 
-.parteDos {
+.home_accions_bttns {
+    width: 10rem;
+    height: 3rem;
+    cursor: pointer;
+    margin-bottom: .4rem;
+    border: 1.4px solid var(--color-base);
+    color: var(--color-dark);
+    border-radius: var(--border-radius);
+}
+
+.cashMoveOptions,
+.altaOptions {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
     display: flex;
-    gap: 1em;
-    margin-top: 1em;
+    flex-direction: column;
+    gap: 0.4rem;
+    min-width: 10rem;
+    background-color: rgba(var(--color-soft-rgb), 0.5);
+    border-radius: var(--border-radius);
+}
+
+.optionsBttns {
+    width: 95%;
+    margin: .2rem;
+    padding: 0.2rem;
+    cursor: pointer;
+    border: 1.4px solid var(--color-base);
+    color: var(--color-dark);
+    border-radius: var(--border-radius);
+}
+
+.quick_search_container {
+    margin: 1.4rem;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.8rem;
+}
+
+.quick_search_subcontainer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.quick_search_bttn {
+    width: 45%;
+    cursor: pointer;
 }
 
 .bttn {
-    background-color: white;
-    color: #4e6b74;
-    border: none;
-    width: 14em;
-    height: 4em;
-    letter-spacing: 0.2em;
-    border-radius: .25em;
-    border: 1.8px solid #4e6b74;
+    height: 3rem;
+    padding: .4rem;
+    
+    border: 1.4px solid var(--color-base);
+    color: var(--color-dark);
+    border-radius: var(--border-radius);
 }
-
-.bttnL {
-    background-color: #4f5054;
-    color: white;
-    border: none;
-    width: 29em;
-    height: 4em;
-    letter-spacing: 0.2em;
-}
-
-.bttnALt {
-    background-color: white;
-    color: #4e6b74;
-    border: none;width: 90%;
-    height: 4em;
-    letter-spacing: 0.2em;
-    border-radius: .25em;
-    border: 1.8px solid #4e6b74;
-    font-size: .6em;
-}
-
-.optionsAlta {
-    width: 12em;
-}
-
