--- a/front/src/Components/Home/home.module.css
+++ b/front/src/Components/Home/home.module.css
@@ -37,7 +37,10 @@
 }
 
 .cashMoveOptions,
-.altaOptions {
+.altaOptions,
+.stockOptions,
+.reportOptions,
+.superAdminOptions {
     position: absolute;
     top: 100%;
     left: 0;
